# VulkanProject

./: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
engine/: app.cpp  app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  lvk_buffer.cpp  lvk_buffer.hpp  lvk_camera.cpp  lvk_camera.hpp  lvk_descriptors.cpp  lvk_descriptors.hpp  lvk_device.hpp  lvk_frame_info.hpp  lvk_game_object.cpp  lvk_game_object.hpp  lvk_model.cpp  lvk_model.hpp  lvk_pipeline.cpp  lvk_pipeline.hpp  lvk_renderer.cpp  lvk_renderer.hpp  lvk_swap_chain.cpp  lvk_swap_chain.hpp  lvk_utils.hpp  lvk_window.cpp  lvk_window.hpp  simple_render_system.cpp  simple_render_system.hpp
engine/rendering/: lvk_buffer.cpp  lvk_buffer.hpp  lvk_camera.hpp  lvk_descriptors.cpp  lvk_device.hpp  lvk_frame_info.hpp  lvk_game_object.cpp  lvk_game_object.hpp  lvk_model.hpp  lvk_pipeline.cpp  lvk_pipeline.hpp  lvk_renderer.cpp  lvk_swap_chain.hpp  lvk_window.cpp
engine/rendering/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
shaders/: shader.frag.spv  shader.vert.spv
src/shaders/: point_light.frag  point_light.vert  shader.frag  shader.vert
